# walros

./: .gitignore  Cargo.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: main.rs  serial.rs  vga_buffer.rs
scripts/: build.sh  commit.sh  run.sh
