[workspace]
resolver = "3"
members = ["kernel"]


[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Abort on panic so we don't have to deal with stack unwinding (eh_personality)
panic = "abort"
# Turn on a small amount of optimization in Development mode.
opt-level = 0
lto = false
#debug = false

[profile.release]
# Abort on panic so we don't have to deal with stack unwinding (eh_personality)
panic = "abort"